think i forgot to save?

--- a/testing/tests.ipynb
+++ b/testing/tests.ipynb
@@ -178,45 +178,51 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "def parser(register_dict):\n",
-    "    \"\"\"\n",
-    "    Handler for readregs function to print in human readable form\n",
-    "    \"\"\"\n",
-    "\n",
-    "    for key in register_dict:\n",
-    "        if type(key) == int:\n",
-    "            print('Channel', key, register_dict[key])\n",
-    "        else:\n",
-    "            print(key, register_dict[key])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pll_mult 4\n",
-      "Channel 0 {'freq': 0.0, 'phase': 0.0, 'amp': 1}\n",
-      "Channel 1 {'freq': 0.0, 'phase': 0.0, 'amp': 1}\n",
-      "Channel 2 {'freq': 0.0, 'phase': 0.0, 'amp': 1}\n",
-      "Channel 3 {'freq': 0.0, 'phase': 0.0, 'amp': 1}\n",
-      "None\n"
+      "PLL Multiplier: 4\n",
+      "Channel 0:\n",
+      "  Frequency: 0.0 Hz\n",
+      "  Phase: 0.0 degrees\n",
+      "  Amplitude: 1\n",
+      "Channel 1:\n",
+      "  Frequency: 0.0 Hz\n",
+      "  Phase: 0.0 degrees\n",
+      "  Amplitude: 1\n",
+      "Channel 2:\n",
+      "  Frequency: 0.0 Hz\n",
+      "  Phase: 0.0 degrees\n",
+      "  Amplitude: 1\n",
+      "Channel 3:\n",
+      "  Frequency: 0.0 Hz\n",
+      "  Phase: 0.0 degrees\n",
+      "  Amplitude: 1\n"
      ]
     }
    ],
    "source": [
-    "print(parser(readregs()))"
+    "def format_regs(ad9959: dict) -> str:\n",
+    "    formatted_str = []\n",
+    "    formatted_str.append(f\"PLL Multiplier: {ad9959['pll_mult']}\")\n",
+    "    \n",
+    "    for i in range(4):\n",
+    "        formatted_str.append(f\"Channel {i}:\")\n",
+    "        formatted_str.append(f\"  Frequency: {ad9959[i]['freq']} Hz\")\n",
+    "        formatted_str.append(f\"  Phase: {ad9959[i]['phase']} degrees\")\n",
+    "        formatted_str.append(f\"  Amplitude: {ad9959[i]['amp']}\")\n",
+    "    \n",
+    "    return \"\\n\".join(formatted_str)\n",
+    "\n",
+    "ad9959 = readregs()\n",
+    "print(format_regs(ad9959))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +342,7 @@
        "27"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +399,8 @@
     "\n",
     "def get_pow(phase: float):\n",
     "    \n",
-    "    pow = round(phase / 360 * (2**14 - 1))\n",
+    "    # pow = round(phase / 360 * (2**14 - 1))\n",
+    "    pow = round(phase / 360 * (2**14))\n",
     "\n",
     "    return pow\n",
     "\n",
@@ -420,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +436,7 @@
        "'ok\\n'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +479,7 @@
        "'ok\\n'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +527,7 @@
        "'ok\\n'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,20 +538,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ok\\n'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# freq0 = 100 * MHZ\n",
     "# amp0 = 1\n",
@@ -557,20 +553,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ok\\n'"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# freq1 = 90 * MHZ\n",
     "# amp1 = .7\n",
@@ -590,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +991,7 @@
     "my_instrument.annotate_screen(\"Testing Mode 2: Frequency Sweep\")\n",
     "my_instrument.write(':TIMebase:DELay 40.0E-06')\n",
     "my_instrument.write(':TIMebase:SCALe 10.0E-06')\n",
-    "send('reset')\n",
+    "# send('reset')\n",
     "\n",
     "filename = 'mode2-freqsweep-test.png'\n",
     "\n",
@@ -1069,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1063,7 @@
        "'ok\\nok\\nok\\nok\\nok\\nok\\nok\\nok\\nok\\nok\\nok\\n'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1116,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1191,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1263,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1273,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1340,27 +1325,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ok\\n'"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "send('reset')"
+    "# send('reset')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1427,27 +1401,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ok\\n'"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "send('reset')\n"
+    "# send('reset')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1527,7 +1490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1615,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1624,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1745,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1796,20 +1759,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "45"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_instrument.annotate_screen(\"Testing finished\")"
    ]
